# CryptoLab

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  cryptolab.db
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: bench.md  emil-design-eng.md  lint.md  rebuild-rust.md  test-all.md
.codegraph/: daemon.pid
.codex/: AGENTS.md
.omo/run-continuation/: ses_15de16107ffeCdc3q4FZdmyG4l.json  ses_15de4817effeHPnfliIi9AerCC.json
api_server/: alembic.ini  pyproject.toml
api_server/alembic/: env.py
api_server/alembic/versions/: 0001_initial_schema.py  0002_fix_algorithm_metrics_schema.py
api_server/app/: __init__.py  main.py
api_server/app/core/: __init__.py  cache.py  config.py  context.py  exceptions.py  kek.py  logging.py  security.py  status_codes.py
api_server/app/db/: __init__.py  base.py  session.py
api_server/app/middleware/: __init__.py  audit.py  auth.py  rate_limit.py  trace.py
api_server/app/models/: __init__.py  algorithm_metric.py  key_store.py  operation_log.py  user.py
api_server/app/routers/: __init__.py  audit.py  auth.py  benchmark.py  demos.py  encoding.py  hash.py  keys.py  metrics.py  pubkey.py  scenarios.py  symmetric.py
api_server/app/schemas/: __init__.py  audit.py  auth.py  benchmark.py  common.py  demos.py  encoding.py  hash.py  keys.py  metrics.py  pubkey.py  scenarios.py  symmetric.py
api_server/app/services/: __init__.py  audit_service.py  benchmark_service.py  demo_service.py  demos_service.py  encoding_service.py  hash_service.py  key_service.py  metrics_service.py  pubkey_service.py  scenario_service.py  symmetric_service.py  user_service.py
api_server/tests/: conftest.py  test_aes_verbose.py  test_audit.py  test_auth.py  test_benchmark.py  test_cross_validation.py  test_demos.py  test_encoding.py  test_hash.py  test_jwt.py  test_keys.py  test_metrics.py  test_pubkey.py  test_rate_limit.py  test_router_boundaries.py  test_scenarios.py  test_symmetric.py
benchmarks/: README.md
deploy/: .env.example  Dockerfile.api  Dockerfile.frontend  Dockerfile.rust  docker-compose.yml  nginx.conf
docs/: PROGRESS.md  PROGRESS_DELTA.md  README.md  aes_verbose_trace_fips197.json  cross_validation_matrix.md  verbose_mode.md
docs/progress_evidence/: 00_git_head.txt  00_git_status.txt  01_rust_todo.txt  02_rust_unimplemented.txt  03_rust_todo_comments.txt  04_api_notimplemented.txt  05_api_todo_comments.txt  06_frontend_todo_comments.txt  07_vue_files.txt  08_route_summary.txt  09_ffi_exports.txt  10_tests_list.txt  11_models_files.txt  12_alembic_versions.txt  13_redis_usage.txt  14_security_grep.txt  15_frontend_views_api.txt  16_docs_list.txt  17_benchmark_service.txt  18_demos_service.txt  19_docker_config.txt  20_cargo_test_tail.txt  21_pytest_tail.txt  22_frontend_npm_test_tail.txt  23_frontend_build_tail.txt  24_docker_build_tail.txt  25_router_schema_service_matrix.txt  26_schema_classes.txt  27_model_fields.txt  28_rust_tests_by_module.txt  29_frontend_api_usage.txt  30_import_cryptolab_core.txt  31_readme_claude_docs_summary.txt  32_counts.txt  33_sqlite_counts.txt
docs/report/: FINAL_REPORT.md  FINAL_REPORT_CODE_SNIPPETS.py  FINAL_REPORT_RUST_SNIPPETS.rs  REPORT_ASSET_MAP.md  REPORT_CHECKLIST.md  outline.md  source_index.md
docs/report_assets/: FIGURE_INDEX.md  FIGURE_QA.md  FRONT_SCREENSHOT_CLASSIFICATION.md  SCREENSHOT_CHECKLIST.md  SCREENSHOT_INDEX.md  STATS.md
docs/report_assets/data/: algorithm_implementation.csv  api_endpoints.csv  code_lines_summary.csv  evidence_inventory.csv  fig1_validation_overview.csv  fig2_algorithm_coverage_matrix.csv  fig2_algorithm_coverage_refined.csv  fig3_cross_validation_evidence.csv  fig3_cross_validation_refined.csv  fig4_benchmark_raw.csv  (+10 more)
frontend/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/fontend-figmamake/: README.md  index.html
frontend/src/: App.vue  main.tsx
memory/: MEMORY.md  cryptolab_project.md  feedback_dep_isolation.md
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: error.rs  ffi.rs  lib.rs  traits.rs
rust_core/src/bigint/: mod.rs
rust_core/src/encoding/: base64.rs  mod.rs  utf8.rs
rust_core/src/hash/: hmac.rs  mod.rs  pbkdf2.rs  ripemd.rs  sha1.rs  sha2.rs  sha3.rs
rust_core/src/modes/: cbc.rs  ctr.rs  ecb.rs  gcm.rs  mod.rs
rust_core/src/pubkey/: demos.rs  ecc.rs  ecdsa.rs  mod.rs  rsa.rs
rust_core/src/symmetric/: aes.rs  mod.rs  rc6.rs  sm4.rs
scripts/: bench.ps1  bench.sh  build-rust.ps1  build-rust.sh  env.ps1  env.sh  setup.ps1  setup.sh  test-all.ps1  test-all.sh
scripts/figures/: check_figures.py  figure_style.py  plot_aes_verbose_trace.py  plot_algorithm_coverage_matrix.R  plot_algorithm_coverage_refined.R  plot_benchmark_performance.py  plot_cross_validation_evidence.R  plot_cross_validation_refined.R  plot_security_demos.py  plot_validation_overview.py  run_benchmarks.py
scripts/stats/: generate_stats.py
(+72 files in other folders)
