[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptolab-api"
version = "0.1.0"
description = "CryptoLab REST API — FastAPI service wrapping the Rust core."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CryptoLab Contributors" }]

dependencies = [
    "fastapi==0.110.*",
    "uvicorn[standard]==0.29.*",
    "pydantic==2.6.*",
    "pydantic-settings==2.2.*",

    # Database — [asyncio] pulls in greenlet, required by AsyncSession.
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.29.*",
    "alembic==1.13.*",

    # Cache / rate-limit / blacklist
    "redis==5.0.*",

    # Auth + crypto helpers (stdlib `hmac` etc. are also used)
    "pyjwt==2.8.*",
    "python-multipart==0.0.9",
    "Pillow==10.3.*",

    # Observability
    "structlog==24.1.*",

    # The Rust core. Installed locally via `maturin develop` so we don't
    # pin a version here — see scripts/build-rust.sh.
    # "cryptolab_core"  # managed by maturin develop
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.*",
    "pytest-asyncio==0.23.*",
    "httpx==0.27.*",
    "cryptography>=46.0.0",
    "gmssl==3.2.2",
    "pytest-cov==5.0.*",
    "ruff==0.4.*",
    "mypy==1.10.*",
    "fakeredis>=2.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "RUF"]
ignore = ["S101"]  # asserts are OK in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]  # hard-coded test passwords are fine

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: slow integration/performance checks skipped by default",
]
