[package]
name = "cryptolab_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["CryptoLab Contributors"]
description = "Hand-written cryptographic primitives for the CryptoLab teaching platform."
license = "MIT"
repository = "https://example.invalid/cryptolab"
readme = "../README.md"
publish = false

[lib]
name = "cryptolab_core"
# rlib: usable from criterion benches & integration tests
# cdylib: required by PyO3 to produce a Python-importable extension
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }

# Big-number arithmetic for RSA / ECC modular ops.
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"

# Constant-time comparisons for MACs & tags.
subtle = "2.5"

# OS CSPRNG.
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.2"

# Secret-zeroizing on drop (key material).
zeroize = { version = "1.7", features = ["derive"] }

# Reference implementations kept ONLY for cross-validation tests, never on
# production paths. Behind the "reference-validation" feature.
sha2 = { version = "0.10", optional = true }
sha3 = "0.10"
ripemd = "0.1"

# Hex codec — used by FFI conversion helpers + test vector parsing.
hex = "0.4"

# Error helpers.
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex-literal = "0.4"
proptest = "1.4"

[features]
default = []
# Enable cross-checking against RustCrypto reference impls in tests.
reference-validation = ["sha2"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "thin"
debug = false

# Criterion bench harness — each algo group gets its own bench file under
# benchmarks/ in the workspace root. The benches themselves are added once
# the algorithms are implemented; until then `cargo bench` will simply find
# no bench targets.
